2008-09-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c (filter_model_visible_func): Don't
	leak a GFile.

2008-09-19  Owen Taylor  <otaylor@redhat.com>

	Small cleanups to debug messages for GtkPlug/GtkSocket

	* gtk/gtksocket-x11.c: Fix debug message to say "Socket" not "Plug"
	* gtk/gtkplug-x11.c: Remove excess newlines from the ends of debug
	messages.

2008-09-19  Carlos Garnacho  <carlos@imendio.com>

	Bug 83935 – GtkEntry's default invisible char should be U+25CF

	* gtk/gtkentry.c (find_invisible_char) (gtk_entry_init): Find a
	more suitable invisible char than '*' based on the used font.
	(gtk_entry_class_init) (gtk_entry_set_property)
	(gtk_entry_get_property): Add a "invisible-char-set" property.
	(gtk_entry_unset_invisible_char): New function, needed now that the
	default invisible char isn't fixed.
	* gtk/gtkentry.h:
	* gtk/gtk.symbols:
	* docs/reference/gtk/gtk-sections.txt: Add the new function.

2008-09-19  Christian Persch  <chpe@gnome.org>
 
 	Bug 552837 – mem leak in gtkimmulticontext
 
 	* gtk/gtkimmulticontext.c: (gtk_im_multicontext_get_slave): Plug mem
 	leak.
 
2008-09-18  Emmanuele Bassi  <ebassi@linux.intel.com>

	* gtk/gtkfilechooserdefault.c (settings_save): Save the size column
	visibility state with the rest of the FileChooser settings.

2008-09-18  Emmanuele Bassi  <ebassi@linux.intel.com>

	Bug 325095 – show a 'size' column

	* gtk/gtkfilechooserdefault.c:
	* gtk/gtkfilechooserprivate.h: Add a context menu item controlling
	the visibility of the file size column. This works only for the
	browse mode, and the column is not visible by default.

	* gtk/gtkfilechoosersettings.[ch]: Add a ShowSizeColumn key to the
	settings file.

2008-09-18  Dominic Lachowicz  <domlachowicz@gmail.com>

	* modules/engines/ms-windows/*: Revert most of previous patch, as
	it didn't work as expected; Some work toward #531086 - the new
	GtkTooltip widget doesn't theme properly on win32. Now, at least
	the background color seems okay
	